--- a/frontend/src/styles/normalize.scss
+++ b/frontend/src/styles/normalize.scss
@@ -1,5 +1,31 @@
 * {
-  padding: 0;
-  margin: 0;
+  padding:    0;
+  margin:     0;
   box-sizing: border-box;
 }
+
+html {
+  min-height: 100%;
+  padding:    0 24px;
+}
+
+button, .button {
+  display:          flex;
+  flex-flow:        column;
+  align-items:      center;
+  justify-content:  center;
+  height:           48px;
+  color:            white;
+  background-color: #65E080;
+  border-radius:    16px;
+  border:           none;
+}
+
+// #megarif {
+//   font-family:             Avenir, Helvetica, Arial, sans-serif;
+//   -webkit-font-smoothing:  antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+//   text-align:              center;
+//   color:                   #2C3E50;
+//   margin-top:              60px;
+// }
