--- a/frontend/src/styles/normalize.scss
+++ b/frontend/src/styles/normalize.scss
@@ -2,11 +2,15 @@
   padding:    0;
   margin:     0;
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 }
 
 html {
   min-height: 100%;
-  padding:    24px 24px;
+  padding:    24px 16px;
   background-color: #F4F4F4;
 }
 
